# hack-uk-ai-pdf-tagger

./: .env  .gitignore  README.md  markdownpdf.py  pdfplayground.py  pdfstral.py  pyproject.toml  utils-dump.py  utils.py
.devcontainer/: devcontainer.json
pdf/: Just-One-Image-2-tagged.docx
src/hack_uk_ai_pdf_tagger/: __init__.py
