[tool.poetry]
name = "hack-uk-ai-pdf-tagger"
version = "0.1.0"
description = ""
authors = ["\"Akshay Akula\" <akulaakshay30@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
numpy = "^2.1.1"
PyPDF2 = "^3.0.1"
pymupdf = "^1.24.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
